--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/profile-editor
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.liquibase.url=jdbc:postgresql://localhost:5432/profile-editor
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
 spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
+security.token.key=secret
 
