--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8010
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/profile-editor
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -9,4 +8,5 @@ spring.liquibase.user=postgres
 spring.liquibase.password=postgres
 spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
 security.token.key=secret
-
+server.error.include-message=always
+server.error.include-binding-errors=always
