--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8010
-spring.datasource.url=jdbc:postgresql://localhost:5432/profile-editor
+spring.datasource.url=jdbc:postgresql://localhost:5432/geodata
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.liquibase.url=jdbc:postgresql://localhost:5432/profile-editor
+spring.liquibase.url=jdbc:postgresql://localhost:5432/geodata
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
 spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
