добавлен анализ точек интереса в радиусе 100 км

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,4 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog.xml
 security.token.key=secret
 server.error.include-message=always
 server.error.include-binding-errors=always
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=myGroup
+spring.jpa.database=postgresql
