добавлен анализ точек интереса в радиусе 100 км

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ security.token.key=secret
 server.error.include-message=always
 server.error.include-binding-errors=always
 spring.jpa.database=postgresql
+bootstrap.server.config=gpbtask.fun:9092
+bootstrap.server.input=input22
